--- a/css/main.css
+++ b/css/main.css
@@ -2611,7 +2611,7 @@ header .container .backet {
 .main-3 .container {
   width: 114rem;
   height: 32rem;
-  background-image: url("../../img/Bitmap.png");
+  background-image: url("../img/Bitmap.png");
   background-size: cover;
   padding-top: 10rem;
   padding-left: 9.5rem;
@@ -2620,7 +2620,7 @@ header .container .backet {
 @media only screen and (max-width: 900px) {
   .main-3 .container {
     max-width: 76.8rem;
-    background-image: url("../../img/Bitmap (22).png");
+    background-image: url("../img/Bitmap (22).png");
     background-repeat: no-repeat;
     background-size: contain;
     margin: 0 auto;
@@ -2631,7 +2631,7 @@ header .container .backet {
 
 @media only screen and (max-width: 600px) {
   .main-3 .container {
-    background-image: url("../../img/Bitmap (45).png");
+    background-image: url("../img/Bitmap (45).png");
     padding-left: 2.4rem;
     padding-right: 2.4rem;
     width: 100%;
